[gd_scene load_steps=3 format=2]

[ext_resource path="res://backgraund.jpg" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Backgraund" type="Sprite" parent="."]
position = Vector2( 512.625, 300.375 )
scale = Vector2( 0.532682, 0.553009 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 36.0
margin_top = 2.0
margin_right = 181.0
margin_bottom = 139.0
valign = 2
uppercase = true

[node name="Label2" type="Label" parent="."]
margin_left = 35.0
margin_top = 141.0
margin_right = 186.0
margin_bottom = 273.0
uppercase = true

[node name="Label3" type="Label" parent="."]
margin_left = 415.0
margin_top = 44.0
margin_right = 589.0
margin_bottom = 61.0
text = "Digìte seu nome:"
align = 1

[node name="nome" type="LineEdit" parent="."]
modulate = Color( 0.952941, 0.0392157, 0.639216, 1 )
margin_left = 432.0
margin_top = 72.0
margin_right = 576.0
margin_bottom = 96.0
align = 1

[node name="num" type="LineEdit" parent="."]
modulate = Color( 0.952941, 0.0392157, 0.639216, 1 )
margin_left = 477.0
margin_top = 225.0
margin_right = 535.0
margin_bottom = 249.0
align = 1

[node name="mais" type="LineEdit" parent="."]
modulate = Color( 0.952941, 0.0392157, 0.639216, 1 )
margin_left = 412.0
margin_top = 452.0
margin_right = 613.0
margin_bottom = 489.0
align = 1

[node name="Label4" type="Label" parent="."]
margin_left = 401.0
margin_top = 116.0
margin_right = 610.0
margin_bottom = 139.0
align = 1
uppercase = true

[node name="Label5" type="Label" parent="."]
margin_left = 436.0
margin_top = 279.0
margin_right = 577.0
margin_bottom = 314.0
align = 1
valign = 1

[node name="Label6" type="Label" parent="."]
margin_left = 413.0
margin_top = 371.0
margin_right = 619.0
margin_bottom = 419.0
text = "Adicione na lista
a linguagem de programação
que você não gosta?"
align = 1
